[gd_scene load_steps=12 format=3 uid="uid://cnu201dhmsx2j"]

[ext_resource type="Script" path="res://addons/quest_editor/scripts/main_panel.gd" id="1_o83av"]
[ext_resource type="Script" path="res://addons/quest_editor/scripts/node_tree.gd" id="2_ggtvw"]
[ext_resource type="Texture2D" uid="uid://d067304xefjv8" path="res://addons/quest_editor/icons/ExternalLink.svg" id="2_nssce"]
[ext_resource type="Script" path="res://addons/quest_editor/scripts/variable_tree.gd" id="3_n8wbe"]
[ext_resource type="PackedScene" uid="uid://bbm37xscdri5y" path="res://addons/quest_editor/scenes/graph_node.tscn" id="4_akk4m"]
[ext_resource type="Script" path="res://addons/quest_editor/scripts/graph_edit.gd" id="4_dms14"]
[ext_resource type="Script" path="res://addons/quest_editor/scripts/controllers/open_quest.gd" id="6_xh8w0"]
[ext_resource type="Script" path="res://addons/quest_editor/scripts/controllers/new_quest.gd" id="7_45yrw"]
[ext_resource type="Script" path="res://addons/quest_editor/scripts/controllers/save_quest.gd" id="8_rnona"]
[ext_resource type="Script" path="res://addons/quest_editor/scripts/controllers/quest_data.gd" id="9_t1g7p"]
[ext_resource type="Script" path="res://addons/quest_editor/scripts/main_menu.gd" id="11_ayv1y"]

[node name="MainPanel" type="MarginContainer" node_paths=PackedStringArray("node_tree", "graph_edit", "variable_tree", "file_label", "file_menu_button", "quest_data_controller", "open_quest_controller", "save_dialog_controller", "new_quest_controller", "main_menu")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 0
script = ExtResource("1_o83av")
node_tree = NodePath("WindowContainer/BodyContainer/VSplitContainer/NodeTree")
graph_edit = NodePath("WindowContainer/BodyContainer/GraphEdit")
variable_tree = NodePath("WindowContainer/BodyContainer/VSplitContainer/VariableTree")
file_label = NodePath("WindowContainer/BodyContainer/GraphEdit/MarginContainer/FileLabel")
file_menu_button = NodePath("WindowContainer/MenuContainer/File")
quest_data_controller = NodePath("Controllers/QuestData")
open_quest_controller = NodePath("Controllers/OpenQuest")
save_dialog_controller = NodePath("Controllers/SaveQuest")
new_quest_controller = NodePath("Controllers/NewQuest")
main_menu = NodePath("Controllers/MainMenu")

[node name="WindowContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MenuContainer" type="HBoxContainer" parent="WindowContainer"]
layout_mode = 2

[node name="File" type="MenuButton" parent="WindowContainer/MenuContainer"]
layout_mode = 2
text = "File"
switch_on_hover = true
item_count = 4
popup/item_0/text = "New Quest..."
popup/item_0/id = 0
popup/item_1/text = "Open..."
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/id = 999
popup/item_2/separator = true
popup/item_3/text = "Save"
popup/item_3/id = 2

[node name="Edit" type="MenuButton" parent="WindowContainer/MenuContainer"]
layout_mode = 2
text = "Edit"
switch_on_hover = true
item_count = 8
popup/item_0/text = "Undo"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Redo"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = ""
popup/item_2/id = 1000
popup/item_2/separator = true
popup/item_3/text = "Cut"
popup/item_3/id = 2
popup/item_4/text = "Copy"
popup/item_4/id = 3
popup/item_5/text = "Paste"
popup/item_5/id = 4
popup/item_6/text = ""
popup/item_6/id = 1001
popup/item_6/separator = true
popup/item_7/text = "Duplicate Selected"
popup/item_7/id = 5

[node name="RightButtons" type="HBoxContainer" parent="WindowContainer/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
alignment = 2

[node name="Docs" type="Button" parent="WindowContainer/MenuContainer/RightButtons"]
layout_mode = 2
size_flags_horizontal = 8
text = "Docs"
icon = ExtResource("2_nssce")
flat = true

[node name="BodyContainer" type="HSplitContainer" parent="WindowContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 300

[node name="VSplitContainer" type="VSplitContainer" parent="WindowContainer/BodyContainer"]
layout_mode = 2

[node name="NodeTree" type="Tree" parent="WindowContainer/BodyContainer/VSplitContainer"]
custom_minimum_size = Vector2(150, 64)
layout_mode = 2
size_flags_vertical = 3
hide_root = true
script = ExtResource("2_ggtvw")

[node name="VariableTree" type="Tree" parent="WindowContainer/BodyContainer/VSplitContainer" node_paths=PackedStringArray("variable_add_menu")]
layout_mode = 2
size_flags_vertical = 3
columns = 2
hide_root = true
script = ExtResource("3_n8wbe")
variable_add_menu = NodePath("AddVariableMenu")
variable_group = Array[StringName]([&"local", &"global"])
variable_group_options = Array[Dictionary]([{}, {
"init": {
"type": 1,
"value": false
}
}])

[node name="AddVariableMenu" type="PopupMenu" parent="WindowContainer/BodyContainer/VSplitContainer/VariableTree"]
item_count = 4
item_0/text = "String"
item_0/id = 4
item_1/text = "Bool"
item_1/id = 1
item_2/text = "Integer"
item_2/id = 2
item_3/text = "Float"
item_3/id = 3

[node name="GraphEdit" type="GraphEdit" parent="WindowContainer/BodyContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
script = ExtResource("4_dms14")
graph_node = ExtResource("4_akk4m")

[node name="MarginContainer" type="MarginContainer" parent="WindowContainer/BodyContainer/GraphEdit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="FileLabel" type="Label" parent="WindowContainer/BodyContainer/GraphEdit/MarginContainer"]
modulate = Color(1, 1, 1, 0.239216)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "New Quest"
vertical_alignment = 2

[node name="FooterContainer" type="HBoxContainer" parent="WindowContainer"]
layout_mode = 2

[node name="Controllers" type="Node" parent="."]

[node name="OpenQuest" type="Node" parent="Controllers"]
script = ExtResource("6_xh8w0")

[node name="SaveFileDialog" type="FileDialog" parent="Controllers/OpenQuest"]
popup_window = true
ok_button_text = "Save"
dialog_hide_on_ok = true
filters = PackedStringArray("*.quest ; Quest Data")

[node name="OpenFileDialog" type="FileDialog" parent="Controllers/OpenQuest"]
title = "Open a File"
size = Vector2i(312, 154)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
filters = PackedStringArray("*.quest ; Quest Data")

[node name="SaveConfirmationDialog" type="ConfirmationDialog" parent="Controllers/OpenQuest"]
size = Vector2i(300, 100)
unresizable = true
popup_window = true
ok_button_text = "Save"
dialog_text = "Save the current quest?"

[node name="NewQuest" type="Node" parent="Controllers"]
script = ExtResource("7_45yrw")

[node name="SaveFileDialog" type="FileDialog" parent="Controllers/NewQuest"]
size = Vector2i(312, 154)
popup_window = true
ok_button_text = "Save"
dialog_hide_on_ok = true
filters = PackedStringArray("*.quest ; Quest Data")

[node name="SaveConfirmationDialog" type="ConfirmationDialog" parent="Controllers/NewQuest"]
size = Vector2i(300, 100)
unresizable = true
popup_window = true
ok_button_text = "Save"
dialog_text = "Save the current quest?"

[node name="SaveQuest" type="Node" parent="Controllers"]
script = ExtResource("8_rnona")

[node name="SaveFileDialog" type="FileDialog" parent="Controllers/SaveQuest"]
size = Vector2i(312, 154)
popup_window = true
ok_button_text = "Save"
dialog_hide_on_ok = true
filters = PackedStringArray("*.quest ; Quest Data")

[node name="QuestData" type="Node" parent="Controllers" node_paths=PackedStringArray("graph_edit", "variable_tree")]
script = ExtResource("9_t1g7p")
graph_edit = NodePath("../../WindowContainer/BodyContainer/GraphEdit")
variable_tree = NodePath("../../WindowContainer/BodyContainer/VSplitContainer/VariableTree")

[node name="MainMenu" type="Node" parent="Controllers" node_paths=PackedStringArray("graph_edit", "docs_button", "file_menu_button", "edit_menu_button")]
script = ExtResource("11_ayv1y")
graph_edit = NodePath("../../WindowContainer/BodyContainer/GraphEdit")
docs_button = NodePath("../../WindowContainer/MenuContainer/RightButtons/Docs")
file_menu_button = NodePath("../../WindowContainer/MenuContainer/File")
edit_menu_button = NodePath("../../WindowContainer/MenuContainer/Edit")

[connection signal="item_activated" from="WindowContainer/BodyContainer/VSplitContainer/NodeTree" to="WindowContainer/BodyContainer/VSplitContainer/NodeTree" method="_on_item_activated"]
[connection signal="begin_node_move" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_begin_node_move"]
[connection signal="connection_request" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_connection_request"]
[connection signal="copy_nodes_request" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_copy_nodes_request"]
[connection signal="delete_nodes_request" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_disconnection_request"]
[connection signal="duplicate_nodes_request" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_duplicate_nodes_request"]
[connection signal="end_node_move" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_end_node_move"]
[connection signal="paste_nodes_request" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_paste_nodes_request"]
